[package]
name = "serde-tcod-parser"
version = "0.1.0"
authors = ["Alexander Krivács Schrøder <alexschrod@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde="1"
serde_derive = "1.0"
snafu="0.5"
logos = { git="https://github.com/maciejhirsz/logos" }
